# AI-BORA--STELLAR

./: .aider.chat.history.md  .aider.input.history  .env.example  .firebaserc  .gitattributes  .gitignore  AUDITORIA.md  Cargo.toml  DEMO_VIDEO_SCRIPT.md  DEPLOY_GUIDE.md  EMAIL_MIGRATION.md  ESTADO_FLUJO_COMPLETO.md  IMPLEMENTACION_COMPLETA.md  README.md  VERIFICACION_SOROBAN.md  add-usdc-trustline.mjs  add-usdc-trustline.ts  agent-x402-direct.ts  agent-x402-v2.ts  agent-x402-v3.ts  agent-x402.ts  firestore.rules  fix-x402-client.sh  fund-usdc.mjs  get-usdc.mjs  index.html  metadata.json  mint-usdc.mjs  n8n-aibora-sync.json  n8n-setup-guide.md  optimizar.sh  optimizar_imagenes.sh  package-lock.json  package.json  pay-xlm.mjs  remotion.config.ts  run-x402-demo.sh  server-local.ts  server-mpp.ts  server-x402-simple.ts  (+7 more)
.aider.tags.cache.v4/: cache.db-shm  cache.db-wal
api/: anchor-document.ts  cliente-magic-link.ts  process-payment.ts  send-email.ts  sign-and-submit.ts  stellar-pay.ts  vendedores-criar.ts
contracts/: payment_splitter.rs
contracts/agent_registry/: Cargo.toml
contracts/payment_splitter/: Cargo.toml
contracts/proposal_registry/: CONTRACT.md
docs/: X402_ARCHITECTURE.md
functions/: package.json
functions/src/: index.ts  processarLembretes.ts
lib/stellar/: anchor-document.ts  wallet-manager.ts  x402-client.ts
public/: baixar-pdf.html  debug-cors.html  proposta-comercial.html  proposta.html  robots.txt  sitemap.xml
scripts/: migrateVendedores.js
services/: paymentSplitter.ts
src/: App.tsx  index.css  main.tsx
src/components/: Footer.tsx  (+28 more)
(+150 files in other folders)
